--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Резка металла | Труба на складе</title>
 
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
     <link rel="stylesheet" href="css/style.min.css">
 
     <script defer src="js/jquery-3.6.3.min.js"></script>
     <script defer src="js/slick.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script defer src="js/script.js"></script>
 </head>
 <body>
@@ -530,6 +532,37 @@
                     <div class="about__slide"><img src="img/work-item3.jpg" alt="Фотографии производства и склада"></div>
                 </div>
                 
+            </div>
+        </section>
+        <section class="video">
+            <div class="container">
+                <h2 class="title">Видео работы наших станков</h2>
+                <div class="video__slider">
+                    <div class="video__slide">
+                        <a class="video__link" href="https://www.youtube.com/watch?v=LQkD9I58amE" data-fancybox="">
+                            <img src="img/video-img1.jpg">
+                        </a>
+                        <p class="video__text">Работа ленточнопильного станок TRIUMPH</p>
+                    </div>
+                    <div class="video__slide">
+                        <a class="video__link" href="https://www.youtube.com/watch?v=LQkD9I58amE" data-fancybox="">
+                            <img src="img/video-img2.jpg">
+                        </a>
+                        <p class="video__text">Работа ленточнопильного станок TRIUMPH</p>
+                    </div>
+                    <div class="video__slide">
+                        <a class="video__link" href="https://www.youtube.com/watch?v=LQkD9I58amE" data-fancybox="">
+                            <img src="img/video-img1.jpg">
+                        </a>
+                        <p class="video__text">Работа ленточнопильного станок TRIUMPH</p>
+                    </div>
+                    <div class="video__slide">
+                        <a class="video__link" href="https://www.youtube.com/watch?v=LQkD9I58amE" data-fancybox="">
+                            <img src="img/video-img2.jpg">
+                        </a>
+                        <p class="video__text">Работа ленточнопильного станок TRIUMPH</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
