--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script defer src="js/slick.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script defer src="js/imask.js"></script>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=43b8d178-fed3-4735-9952-ba8f45bc2e53" type="text/javascript"></script>
+
     <script defer src="js/script.js"></script>
 </head>
 <body>
@@ -94,7 +94,7 @@
                     <div class="form__content">
                         <h2 class="fs_32 lh_norm fw_500 mb_12">Рассчитать стоимость резки</h2>
                         <p class="fs_16 lh_200">Перезвоним в течение 15 минут.
-                            Минимальная сумма заказа — 3 000 ₽ </p>
+                            Минимальная сумма заказа — 3&nbsp;000&nbsp;₽ </p>
                     </div>
                     <form action="#" class="form__form">
                         <label class="form__label">
@@ -385,7 +385,7 @@
                         <picture>
                             <source type="image/webp" srcset="img/steps-img1.webp">
                             <source srcset="img/steps-img1.jpg, img/steps-img1-2x.jpg 2x">
-                            <img alt="фото оборудования, процесса" width="505" height="685">
+                            <img alt="фото оборудования, процесса" width="505" height="658">
                         </picture>
                         <picture>
                             <source type="image/webp" srcset="img/steps-img2.webp">
@@ -538,7 +538,8 @@
         </section>
         <section class="video">
             <div class="container">
-                <h2 class="title">Видео работы наших станков</h2>
+                <div class="video__container">
+                    <h2 class="title">Видео работы наших станков</h2>
                 <div class="video__slider">
                     <div class="video__slide">
                         <a class="video__link" href="https://www.youtube.com/watch?v=LQkD9I58amE" data-fancybox="">
@@ -564,6 +565,7 @@
                         </a>
                         <p class="video__text">Работа ленточнопильного станок TRIUMPH</p>
                     </div>
+                </div>
                 </div>
             </div>
         </section>
@@ -1076,7 +1078,7 @@
                 </div>
                 <div class="footer__item">
                     <div class="footer__subscribe">
-                        <p class="fs_16 fw_500 lh_norm mb_12">
+                        <p class="fs_16 fw_500 lh_norm mb_4">
                             Подпишитесь на рассылку и получите чек-лист «Как не стать жертвой мошенников на рынке труб»
                         </p>
                         <a href="#" class="link fs_14 lh_171 mb_24">3 причины подписаться на рассылку</a>
