add mobile part

--- a/index.html
+++ b/index.html
@@ -179,8 +179,9 @@
                     Cверхмощные лазерные комплексы Han’s Laser (24 и 8 кВт) и ленточнопильный станок TRIUMPH обеспечивают чистый и точный рез:
                 </h2>
                 <div class="laser__item">
+                    <p class="fs_24 fw_500 lh_norm mobile">Лазерный труборез Han’s Laser MPS-T5A</p>
                     <div class="laser__item__content">
-                        <p class="fs_40 fw_500 lh_norm mb_32">Лазерный труборез Han’s Laser MPS-T5A</p>
+                        <p class="fs_40 fw_500 lh_norm mb_32 desktop">Лазерный труборез Han’s Laser MPS-T5A</p>
                         <p class="fs_20 fw_500 lh_norm mb_16">ОПИСАНИЕ</p>
                         <p class="fs_18 lh_144 mb_32">Предназначен для резки различных труб, швеллеров,
                             угловых сталей и симметричных фитингов, двутавровых балок, профилей и прочего фасонного проката. 
@@ -220,8 +221,9 @@
                     </div>
                 </div>
                 <div class="laser__item">
+                    <p class="fs_24 fw_500 lh_norm mobile">Лазер для резки листа Han’s Laser MPS-3015CА</p>
                     <div class="laser__item__content">
-                        <p class="fs_40 fw_500 lh_norm mb_32">Лазер для резки листа Han’s Laser MPS-3015CА</p>
+                        <p class="fs_40 fw_500 lh_norm mb_32 desktop">Лазер для резки листа Han’s Laser MPS-3015CА</p>
                         <p class="fs_20 fw_500 lh_norm mb_16">ОПИСАНИЕ</p>
                         <p class="fs_18 lh_144 mb_32">Предназначен для резки листа и металлических плит 
                             и изготовления любых деталей из плоского листа.
@@ -260,8 +262,9 @@
                     </div>
                 </div>
                 <div class="laser__item">
+                    <p class="fs_24 fw_500 lh_norm mobile">Ленточнопильный станок TRIUMPH TBH-800LSAF</p>
                     <div class="laser__item__content">
-                        <p class="fs_40 fw_500 lh_norm mb_32">Ленточнопильный станок TRIUMPH TBH-800LSAF</p>
+                        <p class="fs_40 fw_500 lh_norm mb_32 desktop">Ленточнопильный станок TRIUMPH TBH-800LSAF</p>
                         <p class="fs_20 fw_500 lh_norm mb_16">ОПИСАНИЕ</p>
                         <p class="fs_18 lh_144 mb_32">Предназначен для распила профильных заготовок:
                             нарезки труб, фасонного профиля листов и прочего
