--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="date=no">
+    <meta name="format-detection" content="address=no">
+    <meta name="format-detection" content="email=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>Резка металла | Труба на складе</title>
 
     <link rel="stylesheet" href="css/slick.css">
@@ -540,7 +545,7 @@
             </div>
         </section>
         <section class="video">
-            <div class="container">
+            <div class="container container_pr0">
                 <div class="video__container">
                     <h2 class="title">Видео работы наших станков</h2>
                 <div class="video__slider">
@@ -573,7 +578,7 @@
             </div>
         </section>
         <section class="rew">
-            <div class="container">
+            <div class="container container_pr0">
                <div class="rew__wrap">
                     <h2 class="title">
                         Отзывы наших заказчиков
@@ -1012,7 +1017,7 @@
                     </div>
                     
                 </div>
-                <div class="contacts__tabs">
+                <div class="contacts__tabs desktop">
   
                     <ul class="contacts__tabs__caption">
                         <li class="active">
@@ -1038,7 +1043,22 @@
                         <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/house/bolshoy_tishinskiy_pereulok_8s2/Z04YcwBoSUEBQFtvfXt3eH5mZQ==/?indoorLevel=1&ll=37.578046%2C55.769251&utm_medium=mapframe&utm_source=maps&z=17.12" style="color:#eee;font-size:12px;position:absolute;top:14px;">Большой Тишинский переулок, 8с2 — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?indoorLevel=1&ll=37.578046%2C55.769251&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NjcyOTcyNhJU0KDQvtGB0YHQuNGPLCDQnNC-0YHQutCy0LAsINCR0L7Qu9GM0YjQvtC5INCi0LjRiNC40L3RgdC60LjQuSDQv9C10YDQtdGD0LvQvtC6LCA40YEyIgoN7E8WQhW3E19C&z=17.12" width="100%" height="519" frameborder="0" allowfullscreen="true" style="position:relative;"></iframe></div>
                       </div>
                     
-                  </div>
+                </div>
+                <div class="mobile">
+                    <a href="https://yandex.ru/maps/-/CDDKZG5M" class="contacts__mobile" target="_blank">
+                        <span>Главный офис</span>
+                        Челябинск, пр. Ленина, 55А, оф. 1001
+                    </a>
+                    <a href="https://yandex.ru/maps/-/CDDKZD2R" class="contacts__mobile" target="_blank">
+                        <span>Производство и склад</span>
+                        Челябинск, Свердловский тракт, 28А
+                    </a>
+                    <a href="https://yandex.ru/maps/-/CDDKZXYy" class="contacts__mobile" target="_blank">
+                        <span>Филиал в Москве</span>
+                        Большой Тишинский пер.8, стр.2
+                    </a>
+                    <a href="https://yandex.ru/maps/-/CDDKZG5M" class="btn_main">Посмотреть на карте</a>
+                </div>
             </div>
         </section>
     </main>
