--- a/index.html
+++ b/index.html
@@ -183,127 +183,129 @@
                 <h2 class="title">
                     Cверхмощные лазерные комплексы Han’s Laser (24 и 8 кВт) и ленточнопильный станок TRIUMPH обеспечивают чистый и точный рез:
                 </h2>
-                <div class="laser__item">
-                    <p class="fs_24 fw_500 lh_norm mobile">Лазерный труборез Han’s Laser MPS-T5A</p>
-                    <div class="laser__item__content">
-                        <p class="fs_40 fw_500 lh_norm mb_32 desktop">Лазерный труборез Han’s Laser MPS-T5A</p>
-                        <p class="fs_20 fw_500 lh_norm mb_16">ОПИСАНИЕ</p>
-                        <p class="fs_18 lh_144 mb_32">Предназначен для резки различных труб, швеллеров,
-                            угловых сталей и симметричных фитингов, двутавровых балок, профилей и прочего фасонного проката. 
-                            <br><br>
-                            Производительность до 250 (?) тонн заготовок в сутки.</p>
-                        <p class="fs_20 fw_500 lh_norm">Характеристики</p>
-                        <ul class="laser__list">
-                            <li>Мощность лазера — 24 кВт</li>
-                            <li>Точность — до 0,05 мм</li>
-                        </ul>
-                    </div>
-                    <div class="laser__img">
-                        <picture>
-                            <source type="image/webp" srcset="img/laser-img1.webp">
-                            <source srcset="img/laser-img1.png, img/laser-img1-2x.png 2x">
-                            <img alt="Лазерный труборез Han’s Laser MPS-T5A фото" width="635" height="304">
-                        </picture>
-                        <div class="laser__img__text">
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Макс. габариты резки</p>
-                                <p class="fs_24 lh_norm fw_500">Диаметр - до 250 мм <br>
-                                    Длина - до 6 метров</p>
-                            </div>
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Обрабатываемые толщины</p>
-                                <p class="fs_32 lh_norm fw_500">0,8 мм - 3 мм</p>
-                            </div>
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Максимальный вес</p>
-                                <p class="fs_32 lh_norm fw_500">150 кг</p>
-                            </div>
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Скидка от объема заказа</p>
-                                <p class="fs_32 lh_norm fw_500">до 20%</p>
+                <div class="laser__items">
+                    <div class="laser__item">
+                        <p class="fs_24 fw_500 lh_norm mobile">Лазерный труборез Han’s Laser MPS-T5A</p>
+                        <div class="laser__item__content">
+                            <p class="fs_40 fw_500 lh_norm mb_32 desktop">Лазерный труборез Han’s Laser MPS-T5A</p>
+                            <p class="fs_20 fw_500 lh_norm mb_16">ОПИСАНИЕ</p>
+                            <p class="fs_18 lh_144 mb_32">Предназначен для резки различных труб, швеллеров,
+                                угловых сталей и симметричных фитингов, двутавровых балок, профилей и прочего фасонного проката. 
+                                <br><br>
+                                Производительность до 250 (?) тонн заготовок в сутки.</p>
+                            <p class="fs_20 fw_500 lh_norm">Характеристики</p>
+                            <ul class="laser__list">
+                                <li>Мощность лазера — 24 кВт</li>
+                                <li>Точность — до 0,05 мм</li>
+                            </ul>
+                        </div>
+                        <div class="laser__img">
+                            <picture>
+                                <source type="image/webp" srcset="img/laser-img1.webp">
+                                <source srcset="img/laser-img1.png, img/laser-img1-2x.png 2x">
+                                <img alt="Лазерный труборез Han’s Laser MPS-T5A фото" width="635" height="304">
+                            </picture>
+                            <div class="laser__img__text">
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Макс. габариты резки</p>
+                                    <p class="fs_24 lh_norm fw_500">Диаметр - до 250 мм <br>
+                                        Длина - до 6 метров</p>
+                                </div>
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Обрабатываемые толщины</p>
+                                    <p class="fs_32 lh_norm fw_500">0,8 мм - 3 мм</p>
+                                </div>
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Максимальный вес</p>
+                                    <p class="fs_32 lh_norm fw_500">150 кг</p>
+                                </div>
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Скидка от объема заказа</p>
+                                    <p class="fs_32 lh_norm fw_500">до 20%</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="laser__item">
-                    <p class="fs_24 fw_500 lh_norm mobile">Лазер для резки листа Han’s Laser MPS-3015CА</p>
-                    <div class="laser__item__content">
-                        <p class="fs_40 fw_500 lh_norm mb_32 desktop">Лазер для резки листа Han’s Laser MPS-3015CА</p>
-                        <p class="fs_20 fw_500 lh_norm mb_16">ОПИСАНИЕ</p>
-                        <p class="fs_18 lh_144 mb_32">Предназначен для резки листа и металлических плит 
-                            и изготовления любых деталей из плоского листа.
-                            <br><br>
-                            Производительность до 250 (?) тонн заготовок в сутки.</p>
-                        <p class="fs_20 fw_500 lh_norm">Характеристики</p>
-                        <ul class="laser__list">
-                            <li>Мощность лазера 8 кВт</li>
-                            <li>Точность — до 0,05 мм</li>
-                        </ul>
-                    </div>
-                    <div class="laser__img">
-                        <picture>
-                            <source type="image/webp" srcset="img/laser-img2.webp">
-                            <source srcset="img/laser-img2.png, img/laser-img2-2x.png 2x">
-                            <img alt="Лазер для резки листа Han’s Laser MPS-3015CА фото" width="607" height="348">
-                        </picture>
-                        <div class="laser__img__text">
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Макс. габариты резки</p>
-                                <p class="fs_32 lh_norm fw_500">3000 мм x 1500 мм</p>
-                            </div>
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Обрабатываемые толщины</p>
-                                <p class="fs_32 lh_norm fw_500">0,5 мм - 20 мм</p>
-                            </div>
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Максимальный вес</p>
-                                <p class="fs_32 lh_norm fw_500">800 кг</p>
-                            </div>
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Скидка от объема заказа</p>
-                                <p class="fs_32 lh_norm fw_500">до 20%</p>
+                    <div class="laser__item">
+                        <p class="fs_24 fw_500 lh_norm mobile">Лазер для резки листа Han’s Laser MPS-3015CА</p>
+                        <div class="laser__item__content">
+                            <p class="fs_40 fw_500 lh_norm mb_32 desktop">Лазер для резки листа Han’s Laser MPS-3015CА</p>
+                            <p class="fs_20 fw_500 lh_norm mb_16">ОПИСАНИЕ</p>
+                            <p class="fs_18 lh_144 mb_32">Предназначен для резки листа и металлических плит 
+                                и изготовления любых деталей из плоского листа.
+                                <br><br>
+                                Производительность до 250 (?) тонн заготовок в сутки.</p>
+                            <p class="fs_20 fw_500 lh_norm">Характеристики</p>
+                            <ul class="laser__list">
+                                <li>Мощность лазера 8 кВт</li>
+                                <li>Точность — до 0,05 мм</li>
+                            </ul>
+                        </div>
+                        <div class="laser__img">
+                            <picture>
+                                <source type="image/webp" srcset="img/laser-img2.webp">
+                                <source srcset="img/laser-img2.png, img/laser-img2-2x.png 2x">
+                                <img alt="Лазер для резки листа Han’s Laser MPS-3015CА фото" width="607" height="348">
+                            </picture>
+                            <div class="laser__img__text">
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Макс. габариты резки</p>
+                                    <p class="fs_32 lh_norm fw_500">3000 мм x 1500 мм</p>
+                                </div>
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Обрабатываемые толщины</p>
+                                    <p class="fs_32 lh_norm fw_500">0,5 мм - 20 мм</p>
+                                </div>
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Максимальный вес</p>
+                                    <p class="fs_32 lh_norm fw_500">800 кг</p>
+                                </div>
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Скидка от объема заказа</p>
+                                    <p class="fs_32 lh_norm fw_500">до 20%</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="laser__item">
-                    <p class="fs_24 fw_500 lh_norm mobile">Ленточнопильный станок TRIUMPH TBH-800LSAF</p>
-                    <div class="laser__item__content">
-                        <p class="fs_40 fw_500 lh_norm mb_32 desktop">Ленточнопильный станок TRIUMPH TBH-800LSAF</p>
-                        <p class="fs_20 fw_500 lh_norm mb_16">ОПИСАНИЕ</p>
-                        <p class="fs_18 lh_144 mb_32">Предназначен для распила профильных заготовок:
-                            нарезки труб, фасонного профиля листов и прочего
-                            сплошного проката  под углом 90° и ±45°.
-                            <br><br>
-                            Производительность до 250 (?) тонн заготовок в сутки.</p>
-                        <p class="fs_20 fw_500 lh_norm">Характеристики</p>
-                        <ul class="laser__list">
-                            <li>Мощность — 5,5 кВт</li>
-                            <li>Точность — до 0,1 мм</li>
-                        </ul>
-                    </div>
-                    <div class="laser__img">
-                        <picture>
-                            <source type="image/webp" srcset="img/laser-img3.webp">
-                            <source srcset="img/laser-img3.png, img/laser-img3-2x.png 2x">
-                            <img alt="Ленточнопильный станок TRIUMPH TBH-800LSAF фото" width="511" height="315">
-                        </picture>
-                        <div class="laser__img__text">
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Макс. габариты резки</p>
-                                <p class="fs_32 lh_norm fw_500">800 x 800 мм</p>
-                            </div>
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Обрабатываемые толщины</p>
-                                <p class="fs_32 lh_norm fw_500">до 800 мм</p>
-                            </div>
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Максимальный вес</p>
-                                <p class="fs_32 lh_norm fw_500">250 кг</p>
-                            </div>
-                            <div class="laser__img__text__item">
-                                <p class="fs_18 lh_144 fw_500 mb_9">Скидка от объема заказа</p>
-                                <p class="fs_32 lh_norm fw_500">до 20%</p>
+                    <div class="laser__item">
+                        <p class="fs_24 fw_500 lh_norm mobile">Ленточнопильный станок TRIUMPH TBH-800LSAF</p>
+                        <div class="laser__item__content">
+                            <p class="fs_40 fw_500 lh_norm mb_32 desktop">Ленточнопильный станок TRIUMPH TBH-800LSAF</p>
+                            <p class="fs_20 fw_500 lh_norm mb_16">ОПИСАНИЕ</p>
+                            <p class="fs_18 lh_144 mb_32">Предназначен для распила профильных заготовок:
+                                нарезки труб, фасонного профиля листов и прочего
+                                сплошного проката  под углом 90° и ±45°.
+                                <br><br>
+                                Производительность до 250 (?) тонн заготовок в сутки.</p>
+                            <p class="fs_20 fw_500 lh_norm">Характеристики</p>
+                            <ul class="laser__list">
+                                <li>Мощность — 5,5 кВт</li>
+                                <li>Точность — до 0,1 мм</li>
+                            </ul>
+                        </div>
+                        <div class="laser__img">
+                            <picture>
+                                <source type="image/webp" srcset="img/laser-img3.webp">
+                                <source srcset="img/laser-img3.png, img/laser-img3-2x.png 2x">
+                                <img alt="Ленточнопильный станок TRIUMPH TBH-800LSAF фото" width="511" height="315">
+                            </picture>
+                            <div class="laser__img__text">
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Макс. габариты резки</p>
+                                    <p class="fs_32 lh_norm fw_500">800 x 800 мм</p>
+                                </div>
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Обрабатываемые толщины</p>
+                                    <p class="fs_32 lh_norm fw_500">до 800 мм</p>
+                                </div>
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Максимальный вес</p>
+                                    <p class="fs_32 lh_norm fw_500">250 кг</p>
+                                </div>
+                                <div class="laser__img__text__item">
+                                    <p class="fs_18 lh_144 fw_500 mb_9">Скидка от объема заказа</p>
+                                    <p class="fs_32 lh_norm fw_500">до 20%</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -342,8 +344,8 @@
                             </div>
                             <div class="steps__item__content">
                                 <p class="steps__title">Примем заказ по телефону, почте или на сайте </p>
-                                <p class="steps__text">Позвоните по номерам: +7 351 799-56-54, +7 499 110-15-32. 
-                                    Напишите на почту zakaz@trubanasklade.ru или оставьте заявку через любую форму на сайте. Предоставим скидку за объем до 20%</p>
+                                <p class="steps__text">Позвоните по номерам: <span>+7 351 799-56-54</span>, <span>+7 499 110-15-32</span>. <br> 
+                                    Напишите на почту <br> <span>zakaz@trubanasklade.ru</span> или оставьте заявку через любую форму на сайте. Предоставим скидку за объем до 20%</p>
                             </div>
                         </div>
                         <div class="steps__item">
@@ -361,7 +363,7 @@
                             </div>
                             <div class="steps__item__content">
                                 <p class="steps__title">Примем ваши чертежи или изготовим их сами</p>
-                                <p class="steps__text">Чертеж/макет можно предоставить в любом формате: 
+                                <p class="steps__text">Чертеж/макет можно предоставить в любом формате: <br>
                                     вектор, фото, чертеж, рисунок от руки, скан изделия.
                                     <br><br>
                                     Если у вас нет чертежей/документации — наш инженер-конструктор с 20-летним опытом спроектирует их, также мы поможем рассчитать нагрузки и усилия.</p>
@@ -485,7 +487,7 @@
                 <div class="delivery__map__text">На карте указано примерное время доставки</div>
             </div>
         </section>
-        <section class="form">
+        <section class="form desktop">
             <div class="container">
                 <div class="form__wrapper">
                     <div class="form__content">
