--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     <div class="form__content">
                         <h2 class="fs_32 lh_norm fw_500 mb_12">Рассчитать стоимость резки</h2>
                         <p class="fs_16 lh_200">Перезвоним в течение 15 минут.
-                            Минимальная сумма заказа — 3 000 ₽ </p>
+                            Минимальная сумма заказа — 3&nbsp;000&nbsp;₽ </p>
                     </div>
                     <form action="#" class="form__form">
                         <label class="form__label">
@@ -493,7 +493,7 @@
                     <div class="form__content">
                         <h2 class="fs_32 lh_norm fw_500 mb_12">Рассчитать стоимость резки</h2>
                         <p class="fs_16 lh_200">Перезвоним в течение 15 минут.
-                            Минимальная сумма заказа — 3 000 ₽ </p>
+                            Минимальная сумма заказа — 3&nbsp;000&nbsp;₽ </p>
                     </div>
                     <form action="#" class="form__form">
                         <label class="form__label">
@@ -955,7 +955,7 @@
                     <div class="form__content">
                         <h2 class="fs_32 lh_norm fw_500 mb_12">Рассчитать стоимость резки</h2>
                         <p class="fs_16 lh_200">Перезвоним в течение 15 минут.
-                            Минимальная сумма заказа — 3 000 ₽ </p>
+                            Минимальная сумма заказа — 3&nbsp;000&nbsp;₽ </p>
                     </div>
                     <form action="#" class="form__form">
                         <label class="form__label">
