--- a/page2.html
+++ b/page2.html
@@ -81,8 +81,8 @@
         <section class="promo">
             <div class="container">
                 <div class="promo__wrapper">
-                    <div class="promo__content">
-                        <h1 class="promo__title">Лазерная резка металла 
+                    <div class="promo__content promo__content_w672">
+                        <h1 class="promo__title">Лазерная резка металла <br>
                             от 1 дня, если срочно — от 4 часов </h1>
                         <ul class="promo__subtitle">
                             <li>Режем трубы, листы, фасонный прокат</li>
